Voucher all UI optimized

--- a/KGERP/Views/Vouchers/ApproverRequisitionVoucherApprovalList.cshtml
+++ b/KGERP/Views/Vouchers/ApproverRequisitionVoucherApprovalList.cshtml
@@ -1,14 +1,11 @@
 ﻿@model KGERP.Service.ServiceModel.VoucherModel
 @{
-    ViewBag.Title = "Voucher List";
+    ViewBag.Title = "Voucher Approval";
     var message = TempData["message"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-
 <style type="text/css">
-
     input, select, textarea {
         max-width: 100%;
     }
@@ -16,20 +13,30 @@
     .linkPointe {
         cursor: pointer;
     }
+
+    .ui-datepicker-trigger {
+        width: 37px !important;
+        height: 33px !important;
+        margin-left: 5px !important;
+    }
+
+    .dateCustom {
+        width: 82% !important;
+        border-radius: 1px !important;
+        border: 1px solid #d2d6de !important;
+        height: 33px !important;
+    }
 </style>
 
 <section class="content-header">
     <h1>
-        Requisition Voucher Approval List : (Approver)
+        Voucher Approval
     </h1>
 
 
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-
-        @*<li>
-                <a href="~/Vouchers/ManageBankOrCash?companyId=@Request.QueryString["companyId"]" class="btn btn-primary">New Voucher</a>
-            </li>*@
+        <li class="active"><a href="#">Voucher Approval</a></li>
     </ol>
 </section>
 
@@ -50,45 +57,34 @@
                                     @Html.HiddenFor(model => model.CompanyId, new { id = "CompanyId" })
 
                                     <div class="row">
-                                        @*<div class="col-md-2">
-
-                                                <div class="form-group">
-                                                    @Html.RadioButtonFor(m => m.IsApproved, true) Approved
-                                                    <br />
-                                                    @Html.RadioButtonFor(m => m.IsApproved, false) Pending
-                                                </div>
-                                            </div>*@
-
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-group">
-                                                <label>Voucher Type</label>
+                                                <label class="form-label">Voucher Type</label>
                                                 @Html.DropDownListFor(model => model.VmVoucherTypeId, Model.VoucherTypesList as SelectList, "==Voucher Type==", new { id = "ddlVoucherTypeId", @class = "form-control", @onchange = "generateVoucherNo()", style = "width:100%" })
                                                 @Html.ValidationMessageFor(model => model.VmVoucherTypeId, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
-                                        <div class="col-md-4">
+                                        <div class="col-md-3">
                                             <div class="form-group">
-                                                @Html.Label("From Date", htmlAttributes: new { @class = "control-label" })
-                                                <br />
-                                                @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
+                                                <label class="form-label">From Date</label>
+                                                @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker w-100 dateCustom", @autocomplete = "off" } })
                                                 @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                @Html.Label("To Date", htmlAttributes: new { @class = "control-label" })
-                                                <br />
-                                                @Html.EditorFor(model => model.StrToDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
+                                                <label class="form-label">To Date</label>
+                                                @Html.EditorFor(model => model.StrToDate, new { htmlAttributes = new { @class = "datepicker w-100 dateCustom", @autocomplete = "off" } })
                                                 @Html.ValidationMessageFor(model => model.StrToDate, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
-                                        <div class="col-md-1" style="padding: 0px 2px 0px 8px;">
+                                        <div class="col-md-3">
                                             <div class="form-group">
                                                 <label>&nbsp;</label>
-                                                <button type="submit" id="btnSave" class="btn btn-primary btn-block">Show</button>
+                                                <button type="submit" id="btnSave" class="btn btn-primary btn-block">Search</button>
                                             </div>
                                         </div>
                                     </div>
@@ -99,29 +95,15 @@
                                 <div class="table-responsive">
                                     <table id="KgErpDataTable" class="table table-striped">
                                         <thead>
-                                            <tr style="background-color:#32527B;color:#FFFFFF">
-                                                <th>
-                                                    SL
-                                                </th>
-                                                <th>
-                                                    Requisition No
-                                                </th>
-                                                <th>
-                                                    Voucher No
-                                                </th>
-                                                <th>
-                                                    Voucher Date
-                                                </th>
-                                                <th>
-                                                    Posting Date
-                                                </th>
-                                                <th>
-                                                    Narration
-                                                </th>
-                                                <th style="text-align:center;">
-                                                    Approver's Approval
-                                                </th>
-                                                <th style="width:70px;">Action</th>
+                                            <tr>
+                                                <th style="width: 35px; text-align: center">SL</th>
+                                                <th style="width: 200px; text-align: center">Requisition No</th>
+                                                <th style="width: 115px; text-align: center">Voucher No</th>
+                                                <th style="width: 115px; text-align: center">Voucher Date</th>
+                                                <th style="width: 115px; text-align: center">Posting Date</th>
+                                                <th style="text-align: center">Narration</th>
+                                                <th style="width: 140px; text-align: center">Approval Status</th>
+                                                <th style="width: 70px; text-align: center">Action</th>
                                             </tr>
                                         </thead>
                                         @{int sl = 0;
@@ -130,7 +112,7 @@
                                             @foreach (var item in Model.DataList)
                                             {
                                                 <tr>
-                                                    <td>
+                                                    <td style="text-align: center">
                                                         @(++sl)
                                                     </td>
                                                     <td>
@@ -155,34 +137,25 @@
                                                         }
                                                     </td>
                                                     <td>
-
                                                         @Html.Raw(item.Narration)
-
                                                     </td>
                                                     <td style="text-align:center">
                                                         @if (item.ApproverAprrovalStatusId == (int)KGERP.Utility.EnumBillRequisitionStatus.Pending)
                                                         {
-                                                            <span class="btn btn-warning btn-xs">  @Html.Raw(item.ApproverAprrovalStatusName)</span>
+                                                            <span class="btn btn-warning btn-sm" style="display: block">@Html.Raw(item.ApproverAprrovalStatusName)</span>
 
                                                         }
                                                         else if (item.ApproverAprrovalStatusId == (int)KGERP.Utility.EnumBillRequisitionStatus.Approved)
                                                         {
-                                                            <span class="btn btn-success btn-xs">  @Html.Raw(item.ApproverAprrovalStatusName)</span>
+                                                            <span class="btn btn-success btn-sm" style="display: block">@Html.Raw(item.ApproverAprrovalStatusName)</span>
                                                         }
                                                         else if (item.ApproverAprrovalStatusId == (int)KGERP.Utility.EnumBillRequisitionStatus.Rejected)
                                                         {
-                                                            <span class="btn btn-danger btn-xs">  @Html.Raw(item.ApproverAprrovalStatusName)</span>
+                                                            <span class="btn btn-danger btn-sm" style="display: block">@Html.Raw(item.ApproverAprrovalStatusName)</span>
                                                         }
-
-
-
-
                                                     </td>
                                                     <td>
-                                                        <a href="~/Vouchers/ApproverRequisitionVoucherApproval?companyId=@item.CompanyId&voucherId=@item.VoucherId" title="Details"><i class="glyphicon glyphicon-new-window"></i></a>
-                                                        @*<a href="@Url.Action("GetVoucherReport","Report", new { companyId = item.CompanyId, voucherId = item.VoucherId ,reportName =""})" style="width:100%" target="_blank" class="btn btn-primary btn-xs">
-                                                                Print
-                                                            </a>*@
+                                                        <a href="~/Vouchers/ApproverRequisitionVoucherApproval?companyId=@item.CompanyId&voucherId=@item.VoucherId" title="Details"><i class="glyphicon glyphicon-new-window"></i> Action</a>
                                                     </td>
                                                 </tr>
 
@@ -401,7 +374,7 @@
         }
 
         $(document).ready(function () {
-            
+
         });
 
         var message = '@message';
