--- a/KGERP/Views/Vouchers/RequisitionVoucherList.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherList.cshtml
@@ -67,7 +67,7 @@
                                         <div class="col-md-3">
                                             <div class="form-group">
                                                 <label class="form-label">From Date</label>
-                                                @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker w-100l dateCustom", @autocomplete = "off" } })
+                                                @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker w-100 dateCustom", @autocomplete = "off" } })
                                                 @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
